Prepare project command maven refactor